<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleVRController</string>
    <string name="wireless">Wireless Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="Go_to_VROOM">Go to VROOM</string>
    <string name="all">All</string>
    <string name="test">Testing</string>
    <string name="inflamation">Inflammation</string>
    <string name="infsym">Inflammation+Symptoms</string>
    <string name="healthy">All Healthy Patients</string>
    <string name="top200">Top 200 Species</string>
    <string name="comparePat">Comparing Patient Types</string>
    <string name="timeComp">Time Comparison</string>
    <string name="reconnect">Reconnect</string>
    <string name="title_activity_wireless">Wireless Manager</string>
    <string name="savelist">Record</string>
    <string name="title_activity_gamepad">Gamepad</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="gamepad">Gamepad</string>
    
    <string name="sensor">Mode: None</string> 
    <string name="ip">Select IP</string>
    <string name="velocity">Velocity: 0.000</string>
    <string name="accel">Accel: 0, 0, 0</string>
    <string name="ipPrompt">Select IP:</string>
    <string-array name="hosts_array">
    </string-array>
    <string name="nodePrompt">Select Node:</string>
    <string-array name="nodes_array">
    </string-array>
    <string name="flip">Flip</string>
    <string name="manual">Manual</string>
    <string name="hTracking">Head Tracking</string>
    <string name="deviceOrientation">Device Orientation</string>
    <string name="reset">Reset View</string>
    <string name="recal">Recalibrate</string>
    <string name="cave">Cave</string>
    <string name="speed">Max Speed</string>
    <string name="save">Save</string>

</resources>
