<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/curr_cave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/cave"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/max_speed"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curr_cave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:max="1000"
        android:maxWidth="150dp"
        android:minWidth="50dp"
    	android:background="#FFFFFF" />

    <TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/max_speed"
        android:layout_marginRight="100dp"
        android:layout_toLeftOf="@+id/max_speed"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        android:onClick="save" />

</RelativeLayout>
